--- a/styles/global-initialisation.css
+++ b/styles/global-initialisation.css
@@ -5,7 +5,6 @@
 
 	box-sizing: border-box;
 	touch-action: none;
-	overflow: hidden;
 }
 
 *::-webkit-scrollbar{
@@ -14,9 +13,10 @@
 
 body{
 	max-width: 100vw;
-	max-height: 100vh;
 	width: 100vw;
-	height: 100vh;
+	height: fit-content;
+
+	position: relative;
 
 	padding: 0;
 	margin: 0;
@@ -33,8 +33,6 @@ body *{
 }
 
 a{
-	color: #303234;
-	font-weight: bold;
 	text-decoration: none;
 }
 
